<resources>
    <string name="app_name">Test Hilt</string>


    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="txt_no_account_signup">Don\'t have an account? <font color="#2196F3">Register Now</font></string>
    <string name="txt_register_header">Register Account</string>
    <string name="txt_register_subheader">Please provide all the required information</string>
    <string name="txt_username">Username</string>
    <string name="txt_username_hint">BibekaNandaNayk</string>
    <string name="txt_email">Email</string>
    <string name="txt_email_hint">zahidbhat@gmail.com</string>
    <string name="txt_password">Password</string>
    <string name="txt_password_hint">........</string>
    <string name="txt_sign_up">Sign Up</string>
    <string name="txt_already_have_account">Already have an account? <font color="#2196f3"> Login</font></string>
    <string name="txt_login_header">Welcome Back!</string>

    <string name="txt_login_subheader">to <font color="#2196f3"> HR Attendee </font></string>
    <string name="agree_term">I agree to the  <font color="#2196f3"> terms And Conditions and Privacy Policy </font> set out by this site</string>

    <string name="txt_login">Login</string>
    <string name="txt_error_message">%1$S*</string>
    <string name="note_title">Title</string>
    <string name="txt_title_hint">Write your title</string>
    <string name="txt_description">Description</string>
    <string name="txt_description_hint">Write your description</string>
    <string name="txt_submit">Submit</string>
    <string name="add_note">Add Note</string>
    <string name="txt_register">Hello there register to continue </string>
    <string name="et_first_name">Enter First Name</string>
    <string name="et_last_name">Enter Last Name</string>
    <string name="et_email">Enter Email Address</string>
    <string name="et_password">Enter Password</string>
    <string name="et_confirm_password">Confirm Password</string>


    <string name="txt_login_here"> Hello there, login to continue </string>
    <string name="txt_continue_social"> or continue with social account </string>

</resources>